--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,22 @@
 .App {
-  text-align: center;
+  min-height: 100vh;
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 }
 
-.App-logo {
+.search-bar {
+  width:35%;
+  text-align: center;
+  border: none;
+  padding: 10px;
+}
+
+.course-materials {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
@@ -31,3 +45,4 @@
     transform: rotate(360deg);
   }
 }
+ */
